# VirtualDekanatClient

./: CMakeLists.txt  account.ui  ascommunicator.cpp  ascommunicator.h  clientdata.cpp  clientdata.h  coursesample.cpp  coursesample.h  coursesample.ui  graphstaticteacher.cpp  graphstaticteacher.h  graphstaticteacher.ui  graphstatisticstudent.cpp  graphstatisticstudent.h  graphstatisticstudent.ui  horizontallayout.cpp  horizontallayout.h  horizontallayout.ui  main.cpp  mainwindow.cpp  mainwindow.h  navigationbutton.cpp  navigationbutton.h  news.cpp  news.h  news.ui  page.cpp  page.h  page.ui  pagecontent.cpp  pagecontent.h  pagecontent.ui  pagetitle.cpp  pagetitle.h  pagetitle.ui  schedulesample.cpp  schedulesample.h  schedulesample.ui  server.cpp  server.h  (+20 more)
